Bug 495440 - Additional mount options options are overrided by GUI options (users takes priority over exec)
Summary: Additional mount options options are overrided by GUI options (users takes pr...
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 24.08.2
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL: https://invent.kde.org/system/partiti...
Keywords:
Depends on:
Blocks:
 
Reported: 2024-10-27 17:46 UTC by vort3
Modified: 2024-10-27 20:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description vort3 2024-10-27 17:46:45 UTC
SUMMARY

All options mentioned below apply to a "Edit mount point" window.

When "users can mount and unmount" option is checked and "exec" option is present in "More…" (additional mount options), the order is that additional options go first in /etc/fstab, then "users" option is added (which is enabled by checkbox mentioned above), but "users" implies "noexec", so "exec" is never applied. To have both "users" and "exec", "exec" must go *after* "users" in /etc/fstab. This seems impossible to do in KDE Partition Manager right now?

I edited /etc/fstab manually and moved "exec" after "users", now I have the permissions I need. This wasn't the case when I used Partition Manager mount point editor. I might be wrong here, but I think additional options im "More…" window should go after the options selected by checkboxes in GUI. Turns our, order matters.

Because of this issue I wasn't able to launch some software from my partition, in particular games from Steam won't run when steam's game library is in a partition whose mount options were chosen using KDE partition manager. 


STEPS TO REPRODUCE
1. Edit a mount point
2. Check the "users can mount and unmount" option
3. Add "exec" in "More…" window
4. "No binary execution" checkbox stays unchecked (I think this is the default)

OBSERVED RESULT
/etc/fstab has options "exec,users" for that partition, with "users" overriding "exec" option because it goes after it. This results in a partition mounted with "noexec", as this is implied by "users" option. 

EXPECTED RESULT
/etc/fstab should have options "users,exec" for that partition, resulting in both "users" and "exec" working, this is most likely what a user expects when adding "exec" in the "More…" window.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.2.2
KDE Frameworks Version: 6.7.0
Qt Version: 6.8.0

ADDITIONAL INFORMATION
Kernel Version: 6.11.5-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × 12th Gen Intel® Core™ i5-12500H
Memory: 15.3 GiB of RAM
Graphics Processor: Mesa Intel® Graphics
Manufacturer: Acer
Product Name: Nitro AN515-58
System Version: V1.13
Comment 1 Bug Janitor Service 2024-10-27 19:58:41 UTC
A possibly relevant merge request was started @ https://invent.kde.org/system/partitionmanager/-/merge_requests/50
Comment 2 Andrius Štikonas 2024-10-27 20:08:09 UTC
Git commit 8be691cef4a5667b9903e8ed397bc81893974e93 by Andrius Štikonas.
Committed on 27/10/2024 at 20:06.
Pushed by stikonas into branch 'master'.

Additional mount point options should come after box options from GUI.

Otherwise it might be impossible to override options from GUI,
e.g. users imply noexec, exec from additional options ends up
as exec,users which does not work as expected.

M  +2    -2    src/gui/editmountpointdialogwidget.cpp

https://invent.kde.org/system/partitionmanager/-/commit/8be691cef4a5667b9903e8ed397bc81893974e93