Additional mount point options should come after box options from GUI.

Otherwise it might be impossible to override options from GUI,
e.g. users imply noexec, exec from additional options ends up
as exec,users which does not work as expected.

BUG: 495440